--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -568,7 +568,7 @@
       <div>
         © <span id="year"></span> AmicBridge. All rights reserved.
         &nbsp;|&nbsp;
-        CEO: Habbitx &mdash;
+        CEO: Robert &mdash;
         <a href="mailto:robertamicolsen@gmail.com">robertamicolsen@gmail.com</a>
       </div>
       <div>
